network-policy/allow-egress-to-psql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-psql
  namespace: test
spec:
  podSelector:
    matchLabels:
      app: psql-client
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 172.20.0.5/32
